@@ -190,7 +190,7 @@ yy <- c(-1, 3, 3, -1)
 polygon(xx, yy, col = "grey80")
 abline(h = 1, lwd = 1.5)
 lines(yrs, wa082.crn[, 1], col = "grey50")
-lines(yrs, ffcsaps(wa082.crn[, 1], nyrs = 30), col = "red", lwd = 2)
+lines(yrs, caps(wa082.crn[, 1], nyrs = 30), col = "red", lwd = 2)
 axis(1); axis(2); axis(3);
 par(new = TRUE)
 ## Add EPS
@@ -212,7 +212,7 @@ plot(yrs2, wa082.crn2[, 1], type = "n",
      xlab = "Year", ylab = "RWI", axes=FALSE)
 abline(h = 1, lwd = 1.5)
 lines(yrs2, wa082.crn2[, 1], col = "grey50")
-lines(yrs2, ffcsaps(wa082.crn2[, 1], nyrs = 30),
+lines(yrs2, caps(wa082.crn2[, 1], nyrs = 30),
       col = "red", lwd = 2)
 axis(1); axis(2); axis(3); axis(4)
 box()
@@ -254,7 +254,7 @@ xx <- c(yrs2,rev(yrs2))
 yy <- c(wa082.avg+wa082.se*2,rev(wa082.avg-wa082.se*2))
 polygon(xx,yy,col="grey80",border = NA)
 lines(yrs2, wa082.avg, col = "black")
-lines(yrs2, ffcsaps(wa082.avg, nyrs = 30),
+lines(yrs2, caps(wa082.avg, nyrs = 30),
       col = "red", lwd = 2)
 legend(x=1800,y=0.75,legend=c("Mean","2 SE", "30-yr Spline"),
        lwd=c(1,10,1), col=c("black","grey","red"),
