@@ -331,10 +331,10 @@ grid(col="black",lwd=0.5)
 abline(h=1)
 lines(yrs,dat,col="grey",lwd=1)
 my.cols <- c("#A6611A","#DFC27D","#80CDC1","#018571")
-lines(yrs,ffcsaps(dat,nyrs=256),col=my.cols[1],lwd=3)
-lines(yrs,ffcsaps(dat,nyrs=128),col=my.cols[2],lwd=2)
-lines(yrs,ffcsaps(dat,nyrs=64),col=my.cols[3],lwd=2)
-lines(yrs,ffcsaps(dat,nyrs=32),col=my.cols[4],lwd=2)
+lines(yrs,caps(dat,nyrs=256),col=my.cols[1],lwd=3)
+lines(yrs,caps(dat,nyrs=128),col=my.cols[2],lwd=2)
+lines(yrs,caps(dat,nyrs=64),col=my.cols[3],lwd=2)
+lines(yrs,caps(dat,nyrs=32),col=my.cols[4],lwd=2)
 legend("topright", c("dat", "256yrs", "128yrs", "64yrs", "32yrs"), 
        lwd = 2, col = c("grey",my.cols),bg = "white")
 axis(1);axis(2);axis(3);axis(4)
