@@ -1,5 +1,11 @@
 * CHANGES IN dplR VERSION 1.7.3
 
+File: Various
+----------------
+
+- Replaced ffcsaps with caps in most instances across the package.
+
+
 File: ssf
 ----------------
 
